--- a/aria/web/css/styles.css
+++ b/aria/web/css/styles.css
@@ -772,9 +772,8 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	/* background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat; */
-	background-color: black;
-	/* background-size: cover; */
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
+	background-size: cover;
 }
 
 .header .header-content {
@@ -976,7 +975,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('../images/ampl.jpg');
+	background: url('../images/details-1-background.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -1166,7 +1165,7 @@ input[type='checkbox'] {
 
 .tabs .area-2 {
 	height: 27rem;
-	background: url('../images/wp2812735.jpg') center center no-repeat;
+	background: url('../images/details-2-background.jpg') center center no-repeat;
 	background-size: cover;
 }
 
